Adding correct links in index.html file

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,19 +63,19 @@
         <div class="project-preview-container">
           <ul>
             <li>
-              <a href="./CandyShoop/index.html" target="_blank">Candy Shop</a> <a href="https://github.com/IgorBilyk/IgorBilyk.github.io/tree/master/CandyShoop" target="_blank"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a>
+              <a href="https://candy-site.herokuapp.com/" target="_blank">Candy Shop</a> <a href="https://github.com/IgorBilyk/Candy-shop" target="_blank"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a>
             </li>
             <li>
-              <a href="./Company (CssGrid)/index.html" target="_blank">Company</a> <a href="https://github.com/IgorBilyk/IgorBilyk.github.io/tree/master/Company%20(CssGrid)" target="_blank"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a>
+              <a href="https://company-website-grid.herokuapp.com/" target="_blank">Company</a> <a href="https://github.com/IgorBilyk/Company-website" target="_blank"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a>
             </li>
             <li>
-              <a href="./Luxury Restaurant/index.html" target="_blank">Luxury Restaurant</a> <a href="https://github.com/IgorBilyk/IgorBilyk.github.io/tree/master/Luxury%20Restaurant" target="_blank"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a>
+              <a href="https://luxury-restaurant-website.herokuapp.com/" target="_blank">Luxury Restaurant</a> <a href="https://github.com/IgorBilyk/Luxury-restaurant" target="_blank"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a>
             </li>
             <li>
-              <a href="./E-Commerce/index.html" target="_blank">E-commerce (In progress)</a> <a href="https://github.com/IgorBilyk/IgorBilyk.github.io/tree/master/E-Commerce" target="_blank"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a>
+              <a href="https://bootstrap-simple-example.herokuapp.com/" target="_blank">Bootstrap landing page</a> <a href="https://github.com/IgorBilyk/Bootstrap-4-project" target="_blank"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a>
             </li>
             <li>
-              <a href="https://bootstrap-simple-example.herokuapp.com/" target="_blank">Bootstrap landing page</a> <a href="https://github.com/IgorBilyk/Bootstrap-4-project/tree/master" target="_blank"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a>
+              <a href="https://e-commerce-tempalate.herokuapp.com/" target="_blank">E-commerce (In progress)</a> <a href=https://github.com/IgorBilyk/E-commerce" target="_blank"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a>
             </li>
           </ul>
         </div>
@@ -87,10 +87,10 @@
               <a href="#" target="_blank">Counter</a><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github">
             </li>
             <li>
-              <a href="https://github.com/IgorBilyk/react-expense-tracker" target="_blank">Expense Tracker</a><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github">
+              <a href="https://react-expense-tracker-test-app.herokuapp.com/" target="_blank">Expense Tracker</a><a href="https://github.com/IgorBilyk/react-expense-tracker"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a>
             </li>
             <li>
-              <a href="./Color-Game/index.html" target="_blank">Color Game <a href="https://github.com/IgorBilyk/IgorBilyk.github.io/tree/master/Color-Game" target="_blank"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a></a>
+              <a href="https://guess-color-game-js.herokuapp.com/" target="_blank">Color Game <a href="https://github.com/IgorBilyk/Color-Game" target="_blank"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a></a>
             </li>
             <li>
               <a href="https://react-add-user-app.herokuapp.com/" target="_blank">Add User <a href="https://github.com/IgorBilyk/React-Add-User" target="_blank"><img src="./assets/img/img/github-brands.svg" width="23px"title="GitHub" alt="github"></a></a>
