fix nav bar, removing burger icon

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,22 +47,12 @@
 <body>
   <header class="header" id="header">
     <nav class="navbar">
-      <div class="logo">
-        <h3 class="logo-text"><a href="index.html">Ibilyk</a></h3>
-      </div>
-      <ul class="list-items">
-        <li class="item">
-          <a href="index.html"><i class="im im-home"></i>Home</a>
-        </li>
+      <ul>
+        <li class="logo-text"><a href="/">Ibilyk</a></li>
       </ul>
-      <div class="burger">
-        <div class="line1"></div>
-        <div class="line2"></div>
-        <div class="line3"></div>
-      </div>
     </nav>
   </header>
-  <main>
+  <main class="main-container">
     <div class="container">
       <div class="grid-item"><p>Websites</p>
         <div class="project-preview-container">
@@ -122,7 +112,7 @@
   </footer>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 
-  <script src="assets/js/main.js" defer></script>
+  <!-- <script src="assets/js/main.js" defer></script> -->
 </body>
 
 </html>
