fix to home page path

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,7 +48,7 @@
   <header class="header" id="header">
     <nav class="navbar">
       <ul>
-        <li class="logo-text"><a href="/">Ibilyk</a></li>
+        <li class="logo-text"><a href="index.html">Ibilyk</a></li>
       </ul>
     </nav>
   </header>
